--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -37,5 +38,10 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
     "typescript": "~5.5.2"
+  },
+  "overrides": {
+    "@angular-devkit/build-angular": {
+      "tailwindcss": "^4.0.0"
+    }
   }
 }
